Fix(frontend-events): navbar covered by main content

--- a/frontend_eventura/src/styles/components/_button.scss
+++ b/frontend_eventura/src/styles/components/_button.scss
@@ -5,7 +5,7 @@
 button {
     padding: 8px 40px;
     border: none;
-    border-radius: 10px;
+    // border-radius: 10px;
     background-color: palette.$color-primary;
     font-weight: typography.$fw-bold;
     color: white;
