--- a/frontend_eventura/src/styles/main.scss
+++ b/frontend_eventura/src/styles/main.scss
@@ -25,4 +25,5 @@ main {
 header {
     position: fixed;
     width: 100%;
+    z-index: 1000;
 }
